--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nazmus sakib tunan</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet">
 </head>
 
-<body>
+<body class="font-open-sans">
+  <header>
+    <nav>
+      <div class="logo">
+        <h2>Me<span class="color-orange">r</span>y</h2>
+      </div>
+      <ul class="menu">
+        <li><a href="">Portpolio</a></li>
+        <li><a href="">Blog</a></li>
+        <li><button class="btn">hire me</button></li>
+      </ul>
+    </nav>
+  </header>
 
 </body>
 
