--- a/index.html
+++ b/index.html
@@ -72,6 +72,109 @@
       </div>
     </div>
   </section>
+  <section id="skill">
+    <div class="skill-container">
+      <div class="section-heading">
+        <h2>What I do </h2>
+        <p>I have more than 10 years experience building software for clients all over the world. Below is a quick
+          overview of my
+          main technical skill sets and technologies i use. Want to find out more about my experience? Check out my
+          online resume
+          and project portfolio.</p>
+      </div>
+      <div class="skill-box">
+        <div class="skill-card">
+          <img src="images/icons/js.png" alt="">
+          <h3>JavaScript</h3>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill-card">
+          <img src="images/icons/js.png" alt="">
+          <h3>JavaScript</h3>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill-card">
+          <img src="images/icons/js.png" alt="">
+          <h3>JavaScript</h3>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill-card">
+          <img src="images/icons/js.png" alt="">
+          <h3>JavaScript</h3>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available.
+            Aenean commodo ligula eget dolor.</p>
+        </div>
+      </div>
+  </section>
+  <section id="resume">
+    <div class="section-heading">
+      <h2>A Summary of My Resume</h2>
+    </div>
+    <div class="resume-content">
+      <div class="education">
+        <h2 class="section-title">My Education</h2>
+        <div class="resume-card">
+          <h3 class="card-title">Master in Computer Engineering</h3>
+          <p class="card-info">Harvard University / 2015 - 2017</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+        </div>
+        <hr>
+        <div class="resume-card">
+          <h3 class="card-title">Master in Computer Engineering</h3>
+          <p class="card-info">Harvard University / 2015 - 2017</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+        </div>
+        <hr>
+        <div class="resume-card">
+          <h3 class="card-title">Master in Computer Engineering</h3>
+          <p class="card-info">Harvard University / 2015 - 2017</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+        </div>
+        <hr>
+      </div>
+      <div class="experience">
+        <h2 class="section-title">My Experience</h2>
+        <div class="resume-card">
+          <h3 class="card-title">Master in Computer Engineering</h3>
+          <p class="card-info">Harvard University / 2015 - 2017</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+        </div>
+        <hr>
+        <div class="resume-card">
+          <h3 class="card-title">Master in Computer Engineering</h3>
+          <p class="card-info">Harvard University / 2015 - 2017</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+        </div>
+        <hr>
+        <div class="resume-card">
+          <h3 class="card-title">Master in Computer Engineering</h3>
+          <p class="card-info">Harvard University / 2015 - 2017</p>
+          <p class="card-text">List skill/technologies here. You can change the icon above
+            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+        </div>
+        <hr>
+      </div>
+
+    </div>
+  </section>
 
 </body>
 
