--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <nav>
       <div class="logo">
-        <h2>Me<span class="color-orange">r</span>y</h2>
+        <h2>Tun<span class="color-orange">a</span>n</h2>
       </div>
       <ul class="menu">
         <li><a href="">Portpolio</a></li>
