adding my image and my details

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="banner">
       <div class="banner-content">
         <h2>Hi I'm</h2>
-        <h1>Mary Hardy</h1>
+        <h1>Nazmus Sakib Tunan</h1>
         <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved
           moments.</p>
         <div>
@@ -41,7 +41,8 @@
         </div>
       </div>
       <div class="banner-image">
-        <img src="./images/hardy.png" alt="">
+        <!-- <img src="./images/hardy.png" alt=""> -->
+        <img src="./images/tunan.png" alt="">
 
       </div>
     </section>
@@ -59,19 +60,19 @@
       <div class="about-info">
         <div class="info-card">
           <p>Name</p>
-          <h4>Mary Hardy</h4>
+          <h4>Nazmus Sakib Tunan</h4>
         </div>
         <div class="info-card">
           <p>Email</p>
-          <h4>mh@gmail.com</h4>
+          <h4>nstunan@gmail.com</h4>
         </div>
         <div class="info-card">
           <p>Date of birth</p>
-          <h4>1 November 1998</h4>
+          <h4>10 April 2004</h4>
         </div>
         <div class="info-card">
           <p>From</p>
-          <h4>Los Angel,USA</h4>
+          <h4>Khulna,BD</h4>
         </div>
       </div>
     </div>
